[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# from https://pyo3.rs/v0.20.0/#usage. Note that rlib and cdylib both need to be specified,
# the former makes our crate importable in src/bin/ files while cdylib tells the compiler to
# create the .so file for Python to import from
[lib]
name = "aoc_2023"
crate-type = ["rlib", "cdylib"]


[dependencies]
gridthings = { git = "https://github.com/kafonek/gridthings-rs", version = "0.1.0" }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
regex = "1.10.2"
