[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["Kafonek <matt.kafonek@noteable.io>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
notebook = "^7.0.6"
ipython = "^8.18.1"
ipykernel = "^6.27.1"
maturin = "^1.4.0"
gridthings = "^0.1.2"


[build-system]
requires = ["maturin"]
build-backend = "maturin"
