[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["Kafonek <matt.kafonek@noteable.io>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
notebook = "^7.0.6"
ipython = "^8.18.1"
ipykernel = "^6.27.1"
maturin = "^1.4.0"
gridthings = {git = "https://github.com/kafonek/gridthings", branch = "mrk/cell-hashable"}


[build-system]
requires = ["maturin"]
build-backend = "maturin"
