[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = "Advent of Code 2023 solutions in Python and Rust"
authors = ["Matt Kafonek <kafonek@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
notebook = "^7.0.6"
ipython = "^8.18.1"
ipykernel = "^6.27.1"
maturin = "^1.4.0"
gridthings = {path = "../gridthings", develop = true}
pandas = "^2.1.4"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.0"
black = "^23.11.0"

[build-system]
requires = ["maturin"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "aoc_2023"