[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Matt Kafonek <kafonek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
notebook = "^7.0.6"
lab = "^8.0"
aoc_2023 = {path = "../python", develop = true}
aoc_2023_pyo3 = {path = "../rust-pyo3", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
