[tool.poetry]
name = "aoc_2023"
version = "0.1.0"
description = ""
authors = ["Matt Kafonek <kafonek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
