[package]
name = "aoc_2023_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
aoc_2023 = { version = "0.1.0", path = "../rust" }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = ["console"] }
